# GamePrototype

./: CMakeLists.txt  Info.plist  LICENSE  README.md  resources.qrc
.github/workflows/: cmake.yml
qml/: GameBoard.qml  GameField.qml  MainWindow.qml
src/: main.cpp
tests/: CMakeLists.txt
