CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (new-game)

SET (SRC_DIR src)
SET (SOURCES 
        ${SRC_DIR}/main.cpp)

OPTION (BUILD_TESTING "Build testing" OFF)

SET (CMAKE_CXX_STANDARD 17)

SET (CMAKE_AUTOMOC ON)
SET (CMAKE_AUTORCC ON)

FIND_PACKAGE (Qt5 COMPONENTS Quick Qml Widgets Core)
QT5_ADD_RESOURCES (RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/resources.qrc)

ADD_SUBDIRECTORY (thirdparty EXCLUDE_FROM_ALL)

IF (WIN32)
    ADD_EXECUTABLE (new-game WIN32 ${SOURCES} ${HEADERS} ${RESOURCES} ${QM})

    INSTALL (TARGETS new-game RUNTIME DESTINATION bin)
ELSEIF (APPLE)
    ADD_EXECUTABLE (new-game MACOSX_BUNDLE ${SOURCES} ${HEADERS} ${RESOURCES} ${QM})
    SET_TARGET_PROPERTIES (new-game PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist)

    INSTALL (TARGETS new-game BUNDLE DESTINATION bin)
ENDIF (WIN32)

TARGET_LINK_LIBRARIES (new-game Qt5::Quick Qt5::Qml Qt5::Widgets)

IF (BUILD_TESTING)
    ENABLE_TESTING ()
    ADD_SUBDIRECTORY (tests tests)

    ADD_TEST (tests tests/tests)
ENDIF ()

SET (CPACK_GENERATOR "ZIP")
SET (CPACK_PACKAGE_FILE_NAME "new-game")
INCLUDE (CPack)
